# nao_writing

./: README.md
nao_trajectory_following/: .gitignore  CMakeLists.txt  README.md  package.xml
nao_trajectory_following/config/: nao_writing_rviz_config.rviz
nao_trajectory_following/include/: svg_subsampler
nao_trajectory_following/launch/: draw_svg_demo.launch  message_echoer_nao.launch  nao_camera_controllable.launch  nao_writing_on_surface.launch  webots_nao_sim.launch
nao_trajectory_following/nodes/: message_echoer_nao.py  nao_camera_controllable.py  nao_writer_naoqi.py  publish_svg_traj.py  trajectory_visualizer.py  webots_nao_sim_launch.py  writing_surface_positioner.py
nao_writing_android_nodes/: .gitignore  CMakeLists.txt  README.md  build.gradle  message_echoer.apk  package.xml  settings.gradle
nao_writing_android_nodes/gradle/wrapper/: gradle-wrapper.properties
nao_writing_android_nodes/message_echoer/: build.gradle
nao_writing_android_nodes/message_echoer/src/main/: AndroidManifest.xml
nao_writing_android_nodes/message_echoer/src/main/java/org/ros/android/message_echoer/: AnimationDrawableWithEndCallback.java  DisplayManager.java  DisplayMethods.java  InteractionManager.java  InteractionManagerNode.java  MainActivity.java  SignatureView.java  SystemDrawingViewNode.java  UserDrawingView.java
nao_writing_android_nodes/message_echoer/src/main/res/layout/: main.xml
nao_writing_android_nodes/message_echoer/src/main/res/values/: strings.xml
