<?xml version="1.0"?>
<package>
  <name>nao_trajectory_following</name>
  <version>0.1.0</version>
  <description>A package for nodes which allow the Nao robot to trace trajectories synchronised with other displays (such as a ROS-enabled tablet).</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="deanna.m.good@gmail.com">Deanna Hood</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <author email="deanna.m.good@gmail.com">Deanna Hood</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>
